# Traffic-signals-detecting-C-

./: CMakeLists.txt  Classifier.cpp  Classifier.h  README.md  main.cpp
segmentation/: graph.cpp  main.cpp  smooth_filter.cpp
